Source/SyntaxAnalysis/Grammar
unit           -> block | if | while | line | function_definiton | class_definition

block          -> "{" unit* "}"
line           -> (assignment | expression) ";"

if             -> "if" expression block ("else" (if | block))?
while          -> "while" expression block

assignment     -> assignable "=" expression
assignable     -> Identifier | attr

expression     -> comparison
comparison     -> addition ( ( "!=" | "==" | ">" | ">=" | "<" | "<=" ) addition )?
addition       -> multiplication ( ( "-" | "+" ) multiplication )*
multiplication -> unary ( ( "/" | "*" ) unary )*
unary          -> ( "!" | "-" ) unary | primary
primary        -> Literal | Identifier | "(" expression ")" | call | attr

call           -> expression "(" call_argument_list? ")"
call_argument_list -> expression ("," expression)*

attr           -> expression "." Identifier

function_definition -> "fn" Identifier "(" argument_list_definition? ")" block
argument_list_definition -> Identifier ("," Identifier)*

return         -> "return" expression? ";"
function_unit  -> block | if | while | line | function_definiton | return  // 在__parse_unit实现
function_block -> "{" function_unit* "}"                                   // 在__parse_block实现

method_definition -> VisibilityModifier? function_definition
class_definition -> "class" Identifier "{" method_definition* "}"
